
plugins {
    id 'java'
}

java {
    sourceCompatibility = '21'
}

ext {
    lombokVersion = '1.18.30'
}

group = 'Group'
version = '0.0.1-SNAPSHOT'
description = 'Discord_bot_JandiChecker'

repositories {
    mavenLocal()
    mavenCentral()
    gradlePluginPortal()
    maven { url 'https://repo.maven.apache.org/maven2/' }
    // 아래는 온갖 미러사이트들. 필요 시 주석 해제
    maven { url 'https://maven.aliyun.com/repository/google/' }
    maven { url 'https://maven.aliyun.com/repository/public/' }
    maven { url 'https://maven.aliyun.com/repository/spring/' }
    maven { url 'https://maven.aliyun.com/repository/gradle-plugin/' }
    maven { url 'https://maven.aliyun.com/repository/spring-plugin/' }
    maven { url 'https://plugins.gradle.org/m2/' }
    maven { url 'https://maven.xillio.com/artifactory/libs-release/' }
}

dependencies {

    //////////////////////////////////////////////////////////////////////////////////////////////////////////////
    /////////////////////////// Common dependencies
    //////////////////////////////////////////////////////////////////////////////////////////////////////////////


    /**
     * JAVA ESSENTIALS
     */
    // 로깅 어노테이션을 쓰기 위한 롬복
    // LOMBOK은 사용 전제조건이 까다로우므로 사용 시 주의.
    // 1. Lombok은 implement 시 최신판의 버전 숫자를 필히 명기해줘야 한다.
    // 2. IntelliJ에서 플러그인을 기 설치한 상태여야 하며 셋팅에서 Annotation Processor를 체크, 활성해줘야 한다.
    // 3. 웬만하면 아래 형태에서처럼 네 형태 다 수동으로 지정해 줘야 에러가 잘 안 난다.
    // https://mvnrepository.com/artifact/org.projectlombok/lombok
    def lombokDependency = "org.projectlombok:lombok:${lombokVersion}"
    compileOnly lombokDependency
    testCompileOnly lombokDependency
    annotationProcessor lombokDependency
    testAnnotationProcessor lombokDependency

    // String 취급을 쉽게 해주는 Apache Commons Lang
    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
    implementation 'org.apache.commons:commons-lang3:latest.integration'

    // 파싱 등을 처리하기 위해 영입한 Apache Commons Text
    // https://mvnrepository.com/artifact/org.apache.commons/commons-text
    implementation 'org.apache.commons:commons-text:latest.integration'

    // HTML 파싱이 하도 자주 바뀌어서 빠른 대응을 위해 갖고온 JSoup
    // https://mvnrepository.com/artifact/org.jsoup/jsoup
    implementation 'org.jsoup:jsoup:latest.integration'

    // YAML 설정파일을 읽어오기 위해 import한 JACKSON-YAML 라이브러리
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.dataformat/jackson-dataformat-yaml
    implementation 'com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:latest.integration'
    // https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind
    implementation 'com.fasterxml.jackson.core:jackson-databind:latest.integration'

    // 자바 디스코드 봇 JDA 라이브러리
    // https://mvnrepository.com/artifact/net.dv8tion/JDA
    implementation ('net.dv8tion:JDA:latest.integration') {
        exclude module: 'opus-java' // 음성모듈 제외
    }

    // 스케쥴러 라이브러리
    // https://mvnrepository.com/artifact/org.quartz-scheduler/quartz
    implementation 'org.quartz-scheduler:quartz:latest.integration'

    // 로깅 라이브러리
    // api 'org.apache.utils.logging.log4j:log4j-core' <<< 안쓸려고..
    // 1. Bridge
    // https://mvnrepository.com/artifact/org.slf4j/jcl-over-slf4j
    implementation 'org.slf4j:jcl-over-slf4j:latest.integration'
    // 2. Slf4j API
    // https://mvnrepository.com/artifact/org.slf4j/slf4j-api
    implementation 'org.slf4j:slf4j-api:latest.integration'
    // 3. Binding
    // https://mvnrepository.com/artifact/ch.qos.logback/logback-classic
    implementation 'ch.qos.logback:logback-classic:latest.integration'
    // 4. Slf4j's implemented object (=logback)
    // https://mvnrepository.com/artifact/ch.qos.logback/logback-core
    implementation 'ch.qos.logback:logback-core:latest.integration'


    // ChatGPT를 쓰기 위한 의존성
    // https://mvnrepository.com/artifact/com.theokanning.openai-gpt3-java/client
    implementation 'com.theokanning.openai-gpt3-java:service:latest.integration'

    // 구글 번역 API를 쓰기 위한 구글 클라우드 의존성
    implementation platform('com.google.cloud:libraries-bom:latest.integration')
    implementation 'com.google.cloud:google-cloud-translate:latest.integration'

    // 엑셀 읽기 라이브러리 POI (테스트용)
    // https://mvnrepository.com/artifact/org.apache.poi/poi
    implementation 'org.apache.poi:poi:latest.integration'
    // https://mvnrepository.com/artifact/org.apache.poi/poi-ooxml
    implementation 'org.apache.poi:poi-ooxml:latest.integration'

    // Logback에 Groovy를 쓰기 위한 Groovy
    // https://mvnrepository.com/artifact/org.apache.groovy/groovy-all
    // implementation 'org.apache.groovy:groovy-all:latest.integration'

    //////////////////////////////////////////////////////////////////////////////////////////////////////////////
    /////////////////////////// For only testing below
    //////////////////////////////////////////////////////////////////////////////////////////////////////////////

    // JDEPS로 의존성 풀 리스트 보기
    // 얘도 버전 명기를 해야 돌아간다.
    // https://mvnrepository.com/artifact/org.kordamp.gradle/jdeps-gradle-plugin
    // implementation 'org.kordamp.gradle:jdeps-gradle-plugin:0.19.

    // 테스트를 위한 JUnit
    // https://mvnrepository.com/artifact/org.junit.platform/junit-platform-launcher
    testImplementation 'org.junit.platform:junit-platform-launcher:latest.integration'
    // https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-api
    testImplementation 'org.junit.jupiter:junit-jupiter-api:latest.integration'
    // https://mvnrepository.com/artifact/org.junit.vintage/junit-vintage-engine
    testImplementation 'org.junit.vintage:junit-vintage-engine:latest.integration'

    // JSON을 확인하기 위한 Gson. Only for debugging purpose
    // https://mvnrepository.com/artifact/com.google.code.gson/gson
    testImplementation 'com.google.code.gson:gson:latest.integration'

}

//apply plugin: 'org.kordamp.gradle.jdeps'

// CLI 터미널에서 한글 깨짐 오류가 발생하는 것을 방지한다.
tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}
